--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
     <a href="Resume.html" class="w3-button w3-bar-item">Resume</a>
     <a href="Blog.html" class="w3-button w3-bar-item">Blog</a> 
     <a href="Contact.html" class="w3-button w3-bar-item">Contact</a>
-    <a href="MainPage.html" class="w3-button w3-bar-item w3-right">Main Page</a>
+    <a href="index.html" class="w3-button w3-bar-item w3-right">Main Page</a>
 </nav>
 
  <div class="w3-container w3-center">
